--- a/ConnectedForm/MainWindow.xaml
+++ b/ConnectedForm/MainWindow.xaml
@@ -12,7 +12,45 @@
 
         <Style TargetType="Grid" x:Key="grd">
             <Style.Triggers>
-               
+
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding Path=IsCheckBoxChecked, ElementName=MainWn}" Value="true"/>
+                    </MultiDataTrigger.Conditions>
+                    <MultiDataTrigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="Width"
+                                                To="300" By="0.1" Duration="0:0:0.5"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </MultiDataTrigger.EnterActions>
+                    <MultiDataTrigger.ExitActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="Width"
+                                                To="0" By="0.5" Duration="0:0:0.5"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </MultiDataTrigger.ExitActions>
+                </MultiDataTrigger>
+
+                <EventTrigger RoutedEvent="MouseLeave">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0.3" By="1" Duration="0:0:0.1"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+
+                <EventTrigger RoutedEvent="MouseEnter">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1" By="1" Duration="0:0:0.1"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+
             </Style.Triggers>
         </Style>
     </Window.Resources>
@@ -136,49 +174,35 @@
             </Grid>
         </Grid>
         <Grid Grid.Row="1">
-            <Button x:Name="transmit_btn" HorizontalAlignment="Right" Width="20"  Height="20" Click="transmit_btn_Click"/>
-
-            <!--<Button.Triggers>
-                    <EventTrigger RoutedEvent="Button.Click">
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <DoubleAnimation Storyboard.TargetProperty="Width" Storyboard.TargetName="Gridfortransmit"
-                                                 From="0" To="240" By="1" Duration="0:0:5" AutoReverse="True"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                </Button.Triggers>
-            </Button>-->
+            <Button x:Name="transmit_chk" Click="transmit_chk_Click" HorizontalAlignment="Right" Width="20"  Height="20"/>
         </Grid>
-        <Grid Style="{StaticResource grd}" x:Name="Gridfortransmit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="240" Height="240">
-          
-            <!--<Grid.Style>
-                <Style TargetType="Grid">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding Path=IsPressedBtn}" Value="true">
-                            <DataTrigger.EnterActions>
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetProperty="Width"
-                                                 From="0" To="240" By="1" Duration="0:0:5"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </DataTrigger.EnterActions>
-                            <DataTrigger.ExitActions>
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetProperty="Width"
-                                                 From="240" To="0" By="1" Duration="0:0:5"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </DataTrigger.ExitActions>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Grid.Style>-->
-            <ListView Name="tiktak">
-                
-            </ListView>
+        <Grid x:Name="Gridfortransmit" Style="{StaticResource grd}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="400" Height="240" Background="Transparent">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Button x:Name="ClearList_btn" Grid.Row="0" Content="Очистить" HorizontalAlignment="Left" Click="ClearList_btn_Click"/>
+            <ScrollViewer Grid.Row="1">
+                <StackPanel>
+                    <ListView Name="tiktak">
+                        <Grid Height="26" Margin="3,3,3,3">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="26"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="26"/>
+                                <ColumnDefinition Width="50"/>
+                            </Grid.ColumnDefinitions>
+                            
+                            <Grid Grid.Column="1" Width="250">
+                                <ProgressBar x:Name="Status_transfer" Value="50" Grid.Row="1"/>
+                            </Grid>
+                            
+                            
+                            
+                        </Grid>
+                    </ListView>
+                </StackPanel>
+            </ScrollViewer>
         </Grid>
     </Grid>
 </Window>
